# hw_netgames

./: CMakeLists.txt  README.md  thirdparty.cmake
tasks/: CMakeLists.txt
tasks/task1/: CMakeLists.txt  buffer.hpp  client.cpp  common.hpp  proto.hpp  server.cpp
tasks/task2/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
tasks/task2/common/: Service.hpp  proto.hpp
tasks/task3/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
tasks/task3/common/: assert.hpp  proto.hpp
tasks/task3/game/: Entity.cpp  Entity.hpp
tasks/task4/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
tasks/task4/common/: Allegro.hpp  AsyncInput.hpp  Service.hpp  proto.hpp
tasks/task4/game/: Entity.cpp  Entity.hpp  gameProto.hpp
tasks/task5/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
tasks/task5/common/: Replication.hpp  Service.hpp  bytestream.hpp  proto.hpp
tasks/task5/game/: Entity.hpp  gameProto.hpp
tasks/task6/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
tasks/task6/common/: Allegro.hpp  Service.hpp  common.hpp  proto.hpp  tuple_hash.hpp
tasks/task6/game/: Entity.hpp
